# trl_train_demo

./: .gitignore  README.md  hf_inference_demo.py  inference_demo.py  llm_prompt.py  pyproject.toml
train_demo/: config.py  training.py
