[project]
name = "train_demo"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "pydantic",
    "wandb",
    "tqdm",
    "pytest",
    "ipykernel",
    "pandas",
    "einops",
    "jaxtyping",
    "accelerate>=1.0.1",
    "datasets>=3.1.0",
    "matplotlib>=3.9.4",
    "requests>=2.32.3",
    "setuptools>=75.3.2",
    "wheel>=0.45.1",
    "transformers==4.53.2",
    "torchvision==0.22.0",
    "xformers",
    "torch==2.7.0",
    "bitsandbytes==0.46.1",
    "vllm==0.9.2",
    "trl==0.18.2",
    "peft"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "pre-commit",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["train_demo"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.isort]
known-third-party = ["wandb"]

[tool.pyright]
include = ["inference_verification", "tests"]
